--- a/src/app/modules/FeesManagement/classfee/addclassfee/addclassfee.component.html
+++ b/src/app/modules/FeesManagement/classfee/addclassfee/addclassfee.component.html
@@ -32,7 +32,7 @@
                 <span class="text-danger" *ngIf="f.Amount.touched && f.Amount.hasError('required')">
                     Amount is required.</span>
             </mat-form-field>
-            <mat-form-field appearance="outline" fxFlex>
+            <!-- <mat-form-field appearance="outline" fxFlex>
                 <mat-label>Batch</mat-label>
                 <mat-select formControlName="Batch" #BatchId>
                     <mat-option value="0">---</mat-option>
@@ -42,7 +42,7 @@
                 </mat-select>
                 <span class="text-danger" *ngIf="f.Batch.touched && f.Batch.hasError('required')">Batch is
                     required.</span>
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field appearance="outline" fxFlex>
                 <mat-label>Location</mat-label>
                 <mat-select formControlName="LocationId">
