--- a/src/app/modules/StudentSubject/classsubjectmapping/classsubjectdashboard/classsubjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/classsubjectmapping/classsubjectdashboard/classsubjectdashboard.component.html
@@ -5,7 +5,7 @@
         <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
         <form [formGroup]="searchForm">
-            <mat-form-field appearance="outline">
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>Batch</mat-label>
                 <mat-select formControlName="searchBatchId">
                     <mat-option value="0">--select--</mat-option>
@@ -13,7 +13,7 @@
                         {{item.MasterDataName}}
                     </mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field appearance="outline">
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId">
@@ -76,7 +76,7 @@
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
+                    <button [disabled]="CheckBatchIDForEdit==1" matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
 
