batchid and orgid optimized

--- a/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.scss
+++ b/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.scss
@@ -1,13 +1,13 @@
 mat-drawer {
-    margin-top      : 70px;
+    //margin-top      : 70px;
     width           : 300px;
     background-color:  #20639b ;
     height: 100%;
 }
 
-mat-drawer-content {
-    margin-top: 70px;
-}
+// mat-drawer-content {
+//     margin-top: 70px;
+// }
 
 app-sidebar {
     min-height: 200vh;
