--- a/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.scss
+++ b/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.scss
@@ -1,6 +1,6 @@
-.container{
-    margin-top: 125px;
-}
+// .container{
+//     margin-top: 125px;
+// }
 
 // @media only screen and (max-width: 600px) {
 //     .container {
