--- a/src/app/modules/control/settingboard/settingboard.component.html
+++ b/src/app/modules/control/settingboard/settingboard.component.html
@@ -30,7 +30,7 @@
                 <mat-icon>apps
                 </mat-icon> Application Role Permission
             </ng-template>
-            <app-RoleAppdashboard></app-RoleAppdashboard>
+            <app-RoleAppPermissiondashboard></app-RoleAppPermissiondashboard>
         </mat-tab>
     </mat-tab-group>
 </div>
