--- a/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
@@ -21,7 +21,7 @@
     </mat-tab>  
     <mat-tab>
         <ng-template mat-tab-label>
-            <mat-icon>info</mat-icon>Student Class
+            <mat-icon>info</mat-icon>Assign Student Class
         </ng-template>
         <app-studentclassdashboard></app-studentclassdashboard> 
     </mat-tab>        
